# claude-folio

./: .gitignore  CHANGELOG.md  CLAUDE.md  biome.json  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: document.md  explore.md  plan.md  review.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/polish-commits/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.claude/skills/test-check/: SKILL.md
.github/workflows/: release.yml
docs/: architecture.md  data-model.md  keybinding-system.md  state-management.md
docs/diagrams/: architecture.d2  data-model.d2  frontend-flow.d2  ipc-types.d2  key-sequence.d2  store-dependencies.d2  vim-modes.d2
src/: App.css  App.tsx  global.d.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/assets/: config.template.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bookmarks.rs  cli.rs  clipboard.rs  config.rs  custom_commands.rs  fs.rs  git.rs  mod.rs  recent.rs  search.rs  system.rs  terminal.rs  trash.rs  watch.rs
src/hooks/: useFileOps.ts  useImeAwareEnter.ts  useVimKeys.ts
src/lib/: breadcrumb.ts  bulkRename.ts  customCommands.ts  favorites.ts  pathCompletion.ts  recentHistory.ts  renameSelection.ts  searchFilter.ts  tabSwitch.ts  tauri.ts  themes.ts  visualSelection.ts
src/store/: bookmarkStore.ts  configStore.ts  customCommandStore.ts  fileStore.ts  recentStore.ts  tabStore.ts  uiStore.ts
(+44 files in other folders)
