[package]
name = "mac-filer"
version = "0.1.0"
description = "A Vim-like file manager for macOS"
authors = []
edition = "2021"

[lib]
name = "mac_filer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
trash = "3"
walkdir = "2"
notify = "6"
